--- a/about.html
+++ b/about.html
@@ -24,19 +24,16 @@
         </div>
       </nav>
   <br>
-  <div class="content">
-<h1 class="title">Kashaf (Ka$hmoney)</h1>
-<p>Computer Scientist, Instagrammer, Writer.</p>
-
-<p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
-    Instagram account, @KodeWithKashaf, in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h!
-</p>
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/898199" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px"></iframe>
-<a target="_blank" href="podcast.html">
+</body>
+<div class="content">
+    <h1>About Kashaf</h1>
     <img src="photo2.jpg" class="profilePic">
-  </a>
+    <br>
+    <br>
+    <p>Hello! My name is Kashaf and I am currently in the process
+        of obtaining my Bachelors of Science with a double major in Computer Science
+        and Cognitive Science, and a minor in Psychology. 
+    </p>
 </div>
+</html>
 
-
-<!--Logo for favicon was made by -->
