Update index.html and add writing tab

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <link rel="stylesheet" href="index.css">
+<script src="index.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
@@ -25,18 +28,22 @@
       </nav>
   <br>
   <div class="content">
-<h1 class="title">Kashaf (Ka$hmoney)</h1>
-<p>Computer Scientist, Instagrammer, Writer.</p>
+      <div class="typing-container">
+          
+<h1 class="title">Kashaf</h1>
+<span class="input-cursor"></span>
+</div>
+<p style="text-align:center">Computer Scientist, Instagrammer, Writer.</p>
+
+<img src="photo2.jpg" class="profilePic">
+
+<br>
+<br>
 
 <p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
     Instagram account, @KodeWithKashaf, in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h!
 </p>
 <!-- SnapWidget -->
 <iframe src="https://snapwidget.com/embed/898199" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px"></iframe>
-<a target="_blank" href="podcast.html">
-    <img src="photo2.jpg" class="profilePic">
-  </a>
 </div>
 
-
-<!--Logo for favicon was made by -->
