--- a/index.html
+++ b/index.html
@@ -12,19 +12,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
-<body>
+<body style="overflow-x:hidden;">
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
         <a href="index.html">
             <img src="favicon.ico">
            </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
           </div>
-        </div>
+          <div class="navbar-nav">
+            <a href="writing.html" class="nav-item nav-link">My Writing</a>
+          </div>
       </nav>
   <br>
   <div class="content">
@@ -43,7 +41,15 @@
 <p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
     Instagram account, @KodeWithKashaf, in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h!
 </p>
+
+<strong>Tech Abilities</strong>
+<ul>
+ <li> Experienced: Python, Java, C#, HTML, CSS, Git, Bootstrap</li>
+<li>Comfortable: JavaScript, SQL, C, .NET, Android Studio, Angular, Jenkins, Urban Code Deploy (UCD), Bash</li>
+<li>Familiar: Swift, XCode, Node.js, Firebase, React, MongoDB, PowerBI </li>
+
+</ul>
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/898199" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px"></iframe>
+<iframe src="https://snapwidget.com/embed/898199" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px; display: block; margin-left: auto; margin-right: auto;"></iframe>
 </div>
 
