--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   <div class="content">
       <div class="typing-container">
           
-<h1 class="title">Kashaf</h1>
+<h1 class="glow">Kashaf</h1>
 <span class="input-cursor"></span>
 </div>
+<br>
 <p style="text-align:center">Computer Scientist, Instagrammer, Writer.</p>
 
 <img src="photo2.jpg" class="profilePic">
@@ -39,7 +40,9 @@
 <br>
 
 <p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
-    Instagram account, @KodeWithKashaf, in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h!
+    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
+    recent Instagram feed. To view my past work,
+    volunteer experiences, writing, and more, please navigate through the tabs.
 </p>
 
 <strong>Tech Abilities</strong>
