--- a/podcast.html
+++ b/podcast.html
@@ -10,19 +10,17 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
-        <a href="index.html">
-            <img src="favicon.ico">
-           </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
+    <a href="index.html">
+        <img src="favicon.ico">
+       </a>
+      <div class="navbar-nav">
+        <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
+      </div>
+      <div class="navbar-nav">
+        <a href="writing.html" class="nav-item nav-link">My Writing</a>
+      </div>
+  </nav>
   <br>
 </body>
 <div class="content">
