--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
 </ul>
 <!-- SnapWidget -->
 <iframe src="https://snapwidget.com/embed/898199" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px; display: block; margin-left: auto; margin-right: auto;"></iframe>
+<!-- SnapWidget -->
 </div>
 
