--- a/writing.html
+++ b/writing.html
@@ -23,7 +23,7 @@
   </nav>
   <br>
   <div class="content">
-<h1>My Writing</h1>
+<h1 class="title">My Writing</h1>
 <em>Here are the articles I wrote in University. Click the photo to read the full article!</em>
 <br>
 <br>
