add contact and experience pages

--- a/writing.html
+++ b/writing.html
@@ -20,6 +20,12 @@
       <div class="navbar-nav">
         <a href="writing.html" class="nav-item nav-link">My Writing</a>
       </div>
+      <div class="navbar-nav">
+        <a href="experience.html" class="nav-item nav-link">Experience</a>
+      </div>
+      <div class="navbar-nav">
+        <a href="contactme.html" class="nav-item nav-link">Contact</a>
+      </div>
   </nav>
   <br>
   <div class="content">
