--- a/experience.html
+++ b/experience.html
@@ -8,9 +8,6 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 <link rel="stylesheet" href="index.css">
-<script src="index.js"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body style="overflow-x:hidden;">
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
@@ -31,30 +28,15 @@
           </div>
       </nav>
   <br>
-  <div class="content">
-      <div class="typing-container">
-          
-<h1 class="glow">Kashaf</h1>
-<span class="input-cursor"></span>
+</body>
+<div class="content">
+    <h1>Experience</h1>
+    <strong>Tech Abilities</strong>
+<ul>
+ <li> Experienced: Python, Java, C#, HTML, CSS, Git, Bootstrap</li>
+<li>Comfortable: JavaScript, SQL, C, .NET, Android Studio, Angular, Jenkins, Urban Code Deploy (UCD), Bash</li>
+<li>Familiar: Swift, XCode, Node.js, Firebase, React, MongoDB, PowerBI </li>
 </div>
-<br>
-<p style="text-align:center">Computer Scientist, Instagrammer, Writer.</p>
 
-<img src="photo2.jpg" class="profilePic">
+</html>
 
-<br>
-<br>
-
-<p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
-    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
-    recent Instagram feed. To view my past work,
-    volunteer experiences, writing, and more, please navigate through the tabs.
-</p>
-
-</ul>
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/898199" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px; display: block; margin-left: auto; margin-right: auto;"></iframe>
-<!-- SnapWidget -->
-</div>
-<br>
-<br>
