adding new articles, update index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script src="index.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</head>
+</head><meta name="viewport" content="width=device-width, initial-scale=1" /> 
 <body style="overflow-x:hidden;">
     <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
         <a href="index.html">
@@ -46,7 +46,7 @@
 <br>
 
 <p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
-    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
+    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a> in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
     recent Instagram feed. To view my past work,
     volunteer experiences, writing, and more, please navigate through the tabs.
 </p>
@@ -54,6 +54,7 @@
 </ul>
 <!-- SnapWidget -->
 <iframe src="https://snapwidget.com/embed/953091"allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px; display: block; margin-left: auto; margin-right: auto;"></iframe>
+
 </div>
 <br>
 <br>
