trying to figure out a colour scheme

--- a/contactme.html
+++ b/contactme.html
@@ -12,35 +12,33 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body style="overflow-x:hidden;">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
-        <a href="index.html">
-            <img src="favicon.ico">
-           </a>
-          <div class="navbar-nav">
-            <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
-          </div>
-          <div class="navbar-nav">
-            <a href="writing.html" class="nav-item nav-link">My Writing</a>
-          </div>
-          <div class="navbar-nav">
-            <a href="experience.html" class="nav-item nav-link">Experience</a>
-          </div>
-          <div class="navbar-nav">
-            <a href="contactme.html" class="nav-item nav-link">Contact</a>
-          </div>
-      </nav>
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
+    <a href="index.html">
+        <img src="favicon.ico">
+       </a>
+      <div class="navbar-nav">
+        <a href="podcast.html" class="nav-item nav-link" style="color:black">Worth the Ka$h</a>
+      </div>
+      <div class="navbar-nav">
+        <a href="writing.html" class="nav-item nav-link" style="color:black">My Writing</a>
+      </div>
+      <div class="navbar-nav">
+        <a href="experience.html" class="nav-item nav-link" style="color:black">Experience</a>
+      </div>
+      <div class="navbar-nav">
+        <a href="contactme.html" class="nav-item nav-link" style="color:black">Contact</a>
+      </div>
+  </nav>
   <br>
 </body>
 <div class="content">
-    <h1>Talk to me!</h1>
-
-    If you want to chat, please send me an <a href="mailto:ksalaheen@gmail.com">email</a>!
-    <br>
+    <h1 style="color:#ff4da6">Talk to me!</h1>
+<div style="color:pink">    If you want to chat, please send me an <a href="mailto:ksalaheen@gmail.com">email</a>!</div>
     <br>
     <img src="giphy.gif" style="width:50%; height: 30%;" /> 
     <br>
     <br>
-    <em>Me if you send me an email</em> &#128526	
+    <em style="color:pink">Me if you send me an email</em> &#128526	
 
 </html>
 
