--- a/experience.html
+++ b/experience.html
@@ -10,32 +10,32 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body style="overflow-x:hidden;">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
         <a href="index.html">
             <img src="favicon.ico">
            </a>
           <div class="navbar-nav">
-            <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
+            <a href="podcast.html" class="nav-item nav-link" style="color:black">Worth the Ka$h</a>
           </div>
           <div class="navbar-nav">
-            <a href="writing.html" class="nav-item nav-link">My Writing</a>
+            <a href="writing.html" class="nav-item nav-link" style="color:black">My Writing</a>
           </div>
           <div class="navbar-nav">
-            <a href="experience.html" class="nav-item nav-link">Experience</a>
+            <a href="experience.html" class="nav-item nav-link" style="color:black">Experience</a>
           </div>
           <div class="navbar-nav">
-            <a href="contactme.html" class="nav-item nav-link">Contact</a>
+            <a href="contactme.html" class="nav-item nav-link" style="color:black">Contact</a>
           </div>
       </nav>
   <br>
 </body>
 <div class="content">
-    <h1>Experience</h1>
-    <strong>Tech Abilities</strong>
-<ul>
- <li> Experienced: Python, Java, C#, HTML, CSS, Git, Bootstrap</li>
-<li>Comfortable: JavaScript, SQL, C, .NET, Android Studio, Angular, Jenkins, Urban Code Deploy (UCD), Bash</li>
-<li>Familiar: Swift, XCode, Node.js, Firebase, React, MongoDB, PowerBI </li>
+  <h1 style="color:#ff4da6">Experience</h1>
+    <strong style="color:pink">Tech Abilities</strong>
+<ul style="color:pink">
+ <li style="color:pink"> Experienced: Python, Java, C#, HTML, CSS, Git, Bootstrap</li>
+ <li style="color:pink"> Comfortable: JavaScript, SQL, C, .NET, Android Studio, Angular, Jenkins, Urban Code Deploy (UCD), Bash</li>
+ <li style="color:pink"> Familiar: Swift, XCode, Node.js, Firebase, React, MongoDB, PowerBI </li>
 </div>
 
 </html>
