--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <script src="index.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-</head><meta name="viewport" content="width=device-width, initial-scale=1" /> 
+</head>
 <body style="overflow-x:hidden;">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
         <a href="index.html">
             <img src="favicon.ico">
            </a>
           <div class="navbar-nav">
-            <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
+            <a href="podcast.html" class="nav-item nav-link" style="color:black">Worth the Ka$h</a>
           </div>
           <div class="navbar-nav">
-            <a href="writing.html" class="nav-item nav-link">My Writing</a>
+            <a href="writing.html" class="nav-item nav-link" style="color:black">My Writing</a>
           </div>
           <div class="navbar-nav">
-            <a href="experience.html" class="nav-item nav-link">Experience</a>
+            <a href="experience.html" class="nav-item nav-link" style="color:black">Experience</a>
           </div>
           <div class="navbar-nav">
-            <a href="contactme.html" class="nav-item nav-link">Contact</a>
+            <a href="contactme.html" class="nav-item nav-link" style="color:black">Contact</a>
           </div>
       </nav>
   <br>
@@ -38,23 +38,22 @@
 <span class="input-cursor"></span>
 </div>
 <br>
-<p style="text-align:center">Computer Scientist, Instagrammer, Writer.</p>
-
-<img src="photo2.jpg" class="profilePic">
 
 <br>
-<br>
 
-<p>Hello! My name is Kashaf and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
-    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a> in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
+<p>Hello! My name is Kashaf Salaheen and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
+    Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
     recent Instagram feed. To view my past work,
     volunteer experiences, writing, and more, please navigate through the tabs.
 </p>
 
 </ul>
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/953091"allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:930px; height:930px; display: block; margin-left: auto; margin-right: auto;"></iframe>
-
+<!-- SnapWidget -->
+<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/953135" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1450px; height:1750px; display: block; margin-left: auto; margin-right: auto"></iframe>
+<!-- SnapWidget -->
 </div>
 <br>
 <br>
+</body>
