--- a/podcast.html
+++ b/podcast.html
@@ -10,27 +10,27 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body style="overflow-x:hidden;">
-  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
     <a href="index.html">
         <img src="favicon.ico">
        </a>
       <div class="navbar-nav">
-        <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
+        <a href="podcast.html" class="nav-item nav-link" style="color:black">Worth the Ka$h</a>
       </div>
       <div class="navbar-nav">
-        <a href="writing.html" class="nav-item nav-link">My Writing</a>
+        <a href="writing.html" class="nav-item nav-link" style="color:black">My Writing</a>
       </div>
       <div class="navbar-nav">
-        <a href="experience.html" class="nav-item nav-link">Experience</a>
+        <a href="experience.html" class="nav-item nav-link" style="color:black">Experience</a>
       </div>
       <div class="navbar-nav">
-        <a href="contactme.html" class="nav-item nav-link">Contact</a>
+        <a href="contactme.html" class="nav-item nav-link" style="color:black">Contact</a>
       </div>
   </nav>
   <br>
 </body>
 <div class="content">
-    <h1>Worth the Ka$h</h1>
+    <h1 style="color:#ff4da6">Worth the Ka$h</h1>
     <p>You can find my podcast, "Worth the Ka$h," on Apple Podcasts and Spotify! Or you can listen right here &#128522</p>
     <div id='buzzsprout-small-player-946186'></div><script type='text/javascript' charset='utf-8' src='https://www.buzzsprout.com/946186.js?container_id=buzzsprout-small-player-946186&player=small'></script>
 </div>
