--- a/writing.html
+++ b/writing.html
@@ -10,27 +10,27 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body style="overflow-x:hidden;">
-  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #FFF0F5; width: 3000px">
+  <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
     <a href="index.html">
         <img src="favicon.ico">
        </a>
       <div class="navbar-nav">
-        <a href="podcast.html" class="nav-item nav-link">Worth the Ka$h</a>
+        <a href="podcast.html" class="nav-item nav-link" style="color:black">Worth the Ka$h</a>
       </div>
       <div class="navbar-nav">
-        <a href="writing.html" class="nav-item nav-link">My Writing</a>
+        <a href="writing.html" class="nav-item nav-link" style="color:black">My Writing</a>
       </div>
       <div class="navbar-nav">
-        <a href="experience.html" class="nav-item nav-link">Experience</a>
+        <a href="experience.html" class="nav-item nav-link" style="color:black">Experience</a>
       </div>
       <div class="navbar-nav">
-        <a href="contactme.html" class="nav-item nav-link">Contact</a>
+        <a href="contactme.html" class="nav-item nav-link" style="color:black">Contact</a>
       </div>
   </nav>
   <br>
   <div class="content">
-<h1 class="title">My Writing</h1>
-<em>I absolutely love writing! Here are some articles I've written. Click the photo to read the full article!</em>
+    <h1 style="color:#ff4da6">My Writing</h1>
+<p>I absolutely love writing! Here are some articles I've written. Click the photo to read the full article!</p>
 <br>
 <br>
 <div class="container">
