add fade in effect

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body style="overflow-x:hidden;">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: auto">
         <a href="index.html">
             <img src="favicon.ico">
            </a>
@@ -41,18 +41,15 @@
 
 <br>
 
-<p>Hello! My name is Kashaf Salaheen and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
+<div class="fade-in" style=color:pink>Hello! My name is Kashaf Salaheen and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
     Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
     recent Instagram feed. To view my past work,
     volunteer experiences, writing, and more, please navigate through the tabs.
-</p>
+</div>
 
 </ul>
 <!-- SnapWidget -->
-<!-- SnapWidget -->
-<!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/953135" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1200px; height:1700px; display: block; margin-left: auto; margin-right: auto"></iframe>
-<!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/953135" class="fade-in" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1200px; height:1700px; display: block; margin-left: auto; margin-right: auto"></iframe>
 </div>
 <br>
 <br>
