update insta feed

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     recent Instagram feed. To view my past work,
     volunteer experiences, writing, and more, please navigate through the tabs.
 </div>
-
+<br>
+<br>
 </ul>
 <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/953135" class="fade-in" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:1200px; height:1700px; display: block; margin-left: auto; margin-right: auto"></iframe>
-</div>
+<script src='https://embedsocial.com/js/iframe.js'></script> <iframe style='border: 0; width: 100%; height: 100%;' scrolling=no src='https://embedsocial.com/facebook_album/pro_hashtag/fdedab76f48448441f2a6483c97890dd13f796eb'></iframe><script>iFrameResize();</script></div>
 <br>
 <br>
 </body>
