update nav bar, remove fade in effect

--- a/experience.html
+++ b/experience.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body style="overflow-x:hidden;">
-    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: 3000px">
+    <nav class="navbar navbar-light navbar-expand-lg" style="background-color: white; width: auto">
         <a href="index.html">
             <img src="favicon.ico">
            </a>
