--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <br>
 
-<div class="fade-in" style=color:pink>Hello! My name is Kashaf Salaheen and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
+<div style=color:pink>Hello! My name is Kashaf Salaheen and I am a computer science student. I am passionate about coding, writing, and helping others. I currently run an
     Instagram account, <a href="https://www.instagram.com/kodewithkashaf/?hl=en">@KodewithKashaf</a>  in which I aim to inspire women in STEM. I also host a podcast, Worth the Ka$h! Below, you can see part of my most
     recent Instagram feed. To view my past work,
     volunteer experiences, writing, and more, please navigate through the tabs.
